global theme setting dropdown alignment issue fix

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -268,7 +268,7 @@ div.react-select {
   padding-left: 0px !important;
 }
 .collection-edit__document-actions:before {
-  background: #fff !important;
+  background: #f9f9fa !important;
   /* opacity: 0.85; */
 }
 // ------------------------------------------//
